--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>When Nothing Works 2.0</title>
-  <link rel="stylesheet" href="https://bootswatch.com/4/sandstone/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/slate/bootstrap.min.css">
 
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="forum.png">
 </head>
 <body>
   <app-root>Loading...</app-root>
